fixed spacing

--- a/listener-group.css
+++ b/listener-group.css
@@ -6,12 +6,15 @@
 }
 
 .center-align {
+
   display: flex;
   justify-content: center;
   align-items: center;
+  
 }
 
 .group-h1 {
+
   text-align: center;
   font-size: 2.5rem;
   color: #7C9473;
@@ -19,10 +22,13 @@
 }
 
 .first-para {
+
   margin-top: 10rem;
+
 }
 
 .options {
+
   height: 50px;
 	width: 150px;
 	background-color: #CFDAC8;
@@ -90,11 +96,13 @@
 
   margin-left: 30px;
   margin-top: 25px;
+
 }
 
 #b-2 {
 
   margin-left: 75px;
+
 }
 
 #b-row-flex {
@@ -108,21 +116,24 @@
 
   margin-left: 20px;
   margin-top: 10px;
+
 }
 
 #b-5 {
 
   float: right;
+
 }
 
 #b-6 {
 
-  clear: all;
   margin-top: 75px;
   margin-bottom: 25px;
+
 }
 
 hr {
 
   margin-bottom: 25px;
+
 }
